--- a/styles/style.css
+++ b/styles/style.css
@@ -17,17 +17,17 @@
 .banner-container {
   background-image: url(/assets/Hero-bg.png);
   width: 100%;
- 
+
   height: 652px;
 }
 .banner-container .banner {
   display: flex;
   align-items: center;
   flex-direction: column;
-} 
+}
 /* common section start */
 .heading {
-    margin-top: 32px;
+  margin-top: 32px;
   color: rgb(13, 19, 33);
   width: 998px;
   text-align: center;
@@ -35,28 +35,85 @@
   font-weight: 800;
   line-height: 68px;
 }
-.paragraph{
-    margin-top: 24px;
-    color: #0D1321;
-    width: 852px;
-    text-align: center;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 26px;
+.paragraph {
+  margin-top: 24px;
+  color: #0d1321;
+  width: 852px;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+}
+.button {
+  margin-top: 10px;
+  padding: 12px 20px;
+  font-size: 20px;
+}
+.cart-header {
+  margin-top: 15px;
+}
+.cart-paragraph {
+  margin-top: 15px;
 }
 
 /* common section end */
-.banner-button{
-    margin-top: 32px;
-    border-radius: 4px;
-    border: none;
-    color: #FFF;
-    text-align: center;
-    font-size: 20px;
-    padding: 21px 24px 21px 24px;
-    font-style: normal;
+.banner-button {
+  margin-top: 32px;
+  border-radius: 4px;
+  border: none;
+  color: #fff;
+  text-align: center;
+  font-size: 20px;
+  padding: 21px 24px 21px 24px;
+  font-style: normal;
 
-    line-height: normal;
-background: rgb(13, 19, 33);
+  line-height: normal;
+  background: rgb(13, 19, 33);
 }
 
+.heading1 {
+  text-align: center;
+  margin-top: 30px;
+}
+.paragraph1 {
+  text-align: center;
+  margin-top: 30px;
+}
+
+.developer-container {
+  width: 1140px;
+  height: 1393px;
+  margin: 0 auto;
+  align-items: center;
+}
+.developer-carts {
+  display: flex;
+  gap: 80px;
+  align-items: center;
+  justify-content: center;
+}
+.video-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.video-container p {
+  margin-bottom: 25px;
+  color: rgb(13, 19, 33);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+  letter-spacing: 0%;
+  text-align: center;
+  width: 852px;
+}
+.card-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 1400px;
+ margin: 0 auto;
+ gap: 25px;
+ margin-top: 48px;
+}
